[tool.poetry]
name = "movie-reviews-back"
version = "0.1.0"
description = "Back-end for our movie reviews application"
authors = ["Daniela Flores <diflores@uc.cl>"]

[tool.poetry.dependencies]
python = "^3.7"
uvicorn = "^0.11.7"
fastapi-users = "^0.8.1"
asyncpg = "^0.20.1"
httpx_oauth = "^0.2.2"
tortoise-orm = "^0.16.12"
requests = "^2.23.0"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
autopep8 = "^1.5.1"
pre-commit = "^2.2.0"
pylint = "*"
mypy = "^0.770"
isort = "^4.3.21"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
